error_set/tests/trybuild/error_sources_of_diffrent_names.stderr
error[E0277]: the trait bound `Y: From<X>` is not satisfied
  --> tests/trybuild/error_sources_of_diffrent_names.rs:23:18
   |
23 |     let y: Y = x.into();
   |                  ^^^^ the trait `From<X>` is not implemented for `Y`
   |
   = help: the trait `From<X>` is not implemented for `Y`
           but trait `From<std::io::Error>` is implemented for it
   = help: for that trait implementation, expected `std::io::Error`, found `X`
   = note: required for `X` to implement `Into<Y>`
